[metadata]
name = WignnerFunc_Measurement
version = 0.0.1
author = ChiHuan Nguyen
author_email = ngchihuan@gmail.com
description = Analyse sideband time evolution files and extract the Wigner Function
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ngchihuan/WignerFunc_Measurement
project_urls =
    Bug Tracker = https://github.com/ngchihuan/WignerFunc_Measurement/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
